--- a/package.json
+++ b/package.json
@@ -3,24 +3,29 @@
   "version": "0.0.0",
   "description": "A D3 family tree graph generated from a GRAMPS XML export",
   "main": "index.js",
-  "scripts": {
-    "css": "node-sass --source-map css/index.css.map -o css scss/index.scss css/index.css",
-    "css:watch": "npm run css & npm run css -- -w scss/index.scss",
-    "serve": "http-server -p 9090 ./",
-    "js:build": "browserify -d js/src/index.js > js/dist/bundle.js",
-    "js:watch": "watchify -d js/src/index.js -do js/dist/bundle.js -v",
-    "dev": "parallelshell \"npm run js:watch\" \"npm run css:watch\" \"npm run serve\""
-  },
   "author": "Trygve Wastvedt <trygve.wastvedt@gmail.com>",
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "d3": "^3.5.5"
+    "d3": "^3.5.6"
   },
   "devDependencies": {
     "node-sass": "latest",
     "parallelshell": "latest",
     "watchify": "latest",
-    "browserify": "latest"
+    "browserify": "latest",
+    "live-reload": "latest"
+  },
+  "scripts": {
+    "css": "node-sass --source-map css/index.css.map -o css scss/index.scss css/index.css",
+    "css:watch": "npm run css & npm run css -- -w scss/index.scss",
+    
+    "serve": "http-server -p 9092 ./",
+    "livereload": "live-reload --port 9093 dist/",
+    
+    "js:build": "browserify -d js/src/index.js > js/dist/bundle.js",
+    "js:watch": "watchify -d js/src/index.js -do js/dist/bundle.js -v",
+
+    "dev": "parallelshell \"npm run js:watch\" \"npm run css:watch\" \"npm run livereload\" \"npm run serve\""
   }
 }
