--- a/package.json
+++ b/package.json
@@ -10,28 +10,14 @@
     "@types/d3": "3.x",
     "@types/mousetrap": "^1.6.0",
     "@types/node": "^10.1.2",
-    "browserify": "^16.2.2",
     "d3": "3.x",
     "mousetrap": "^1.6.1",
     "parallelshell": "^3.0.2",
-    "tsify": "^4.0.0",
+    "sass": "^1.3.2",
     "typescript": "^2.8"
   },
+  "scripts": {},
   "devDependencies": {
-    "live-reload": "latest",
-    "watch": "^1.0.2",
-    "watchify": "^3.11.0"
-  },
-  "scripts": {
-    "ts": "browserify src/ts/main.ts --debug -p [ tsify --noImplicitAny ] -o dist/js/bundle.js",
-    "watch-ts": "watchify src/ts/main.ts --debug -p [ tsify --noImplicitAny ] -o dist/js/bundle.js -v",
-    "post-build": "copy-assets",
-    "copy-assets": "cp -r src/html/. dist/",
-    "watch-assets": "watch \"npm run copy-assets\" src/html",
-    "css": "sass src/scss/index.scss:dist/css/index.css",
-    "watch-css": "npm run css & npm run css -- -w src/scss/index.scss",
-    "serve": "live-server --wait=300 --no-browser dist",
-    "watch": "parallelshell \"npm run watch-assets\" \"npm run watch-ts\" \"npm run watch-css\"",
-    "dev": "parallelshell \"npm run watch\" \"npm run serve\""
+    "node-sass": "^4.9.0"
   }
 }
