--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@types/d3": "3.x",
-    "@types/mousetrap": "^1.6.0",
-    "@types/node": "^10.1.2",
-    "d3": "3.x",
-    "mousetrap": "^1.6.1",
+    "@types/d3": "5.x",
+    "@types/mousetrap": "^1.6.3",
+    "@types/node": "^13.1.2",
+    "d3": "5.x",
+    "mousetrap": "^1.6.3",
     "parallelshell": "^3.0.2",
-    "sass": "^1.3.2",
-    "typescript": "^2.8"
+    "sass": "^1.24.0",
+    "typescript": "^3.7",
+    "parcel": "1.12.4"
   },
-  "scripts": {},
+  "scripts": {
+    "start": "parcel ./src/html/index.html"
+  },
   "devDependencies": {
-    "node-sass": "^4.9.0"
+    "node-sass": "^4.13.0"
   }
 }
