--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "@types/mousetrap": "^1.6.3",
     "@types/node": "^13.1.2",
     "d3": "5.x",
+    "moment": "^2.24.0",
     "mousetrap": "^1.6.3",
     "parallelshell": "^3.0.2",
+    "parcel": "1.12.4",
     "sass": "^1.24.0",
-    "typescript": "^3.7",
-    "parcel": "1.12.4"
+    "typescript": "^3.7"
   },
   "scripts": {
     "start": "parcel ./src/html/index.html"
