--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "mousetrap": "^1.6.3",
     "parallelshell": "^3.0.2",
     "parcel": "1.12.4",
+    "prettier": "npm:@btmills/prettier@^2.2.1",
     "sass": "^1.24.0"
   },
   "scripts": {
-    "start": "parcel ./src/html/index.html"
+    "start": "parcel ./src/html/index.html",
+    "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
     "node-sass": "^4.13.0",
-    "prettier": "^2.2.1",
     "typescript": "^3.9.7"
   }
 }
