--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "target": "es2015",
-    "lib": [
-      "es2015",
-      "dom"
-    ]
+    "lib": ["es2015", "dom"]
   },
-  "files": [
-    "src/ts/app.ts"
-  ]
+  "files": ["src/ts/app.ts"]
 }
