--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
   "license": "MIT",
   "dependencies": {
     "@types/d3": "5.x",
-    "@types/mousetrap": "^1.6.3",
-    "@types/node": "^13.1.2",
+    "@types/mousetrap": "^1.6.5",
+    "@types/node": "^14.14.16",
     "d3": "5.x",
     "eslint-config-prettier": "^7.1.0",
-    "moment": "^2.24.0",
-    "mousetrap": "^1.6.3",
+    "moment": "^2.29.1",
+    "mousetrap": "^1.6.5",
     "parallelshell": "^3.0.2",
-    "parcel": "1.12.4",
+    "parcel": "^1.12.4",
     "prettier": "npm:@btmills/prettier@^2.2.1",
-    "sass": "^1.24.0"
+    "sass": "^1.30.0"
   },
   "scripts": {
     "start": "parcel ./src/html/index.html",
+    "package": "parcel build src/html/index.html",
     "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
     "eslint": "^7.16.0",
-    "node-sass": "^4.13.0",
-    "typescript": "^3.9.7"
+    "node-sass": "^5.0.0",
+    "typescript": "^4.1.3"
   }
 }
