--- a/package.json
+++ b/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "family-tree-graph",
-  "version": "0.0.0",
-  "description": "A D3 family tree graph generated from a GRAMPS XML export",
+  "name": "baby-skill-tree",
+  "version": "0.1.0",
+  "description": "A D3 graph of an \"average\" baby's developmental milestones.",
   "main": "index.js",
   "author": "Trygve Wastvedt <trygve.wastvedt@gmail.com>",
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@types/d3": "5.x",
-    "@types/mousetrap": "^1.6.5",
-    "@types/node": "^14.14.16",
-    "d3": "5.x",
-    "eslint-config-prettier": "^7.1.0",
+    "@types/mousetrap": "^1.6.8",
+    "@types/node": "^16.4.13",
+    "d3": "7.x",
+    "d3-dsv": "^3.0.1",
+    "d3-zoom": "^3.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "parallelshell": "^3.0.2",
-    "parcel": "^1.12.4",
-    "prettier": "npm:@btmills/prettier@^2.2.1",
-    "sass": "^1.30.0"
+    "prettier": "npm:@btmills/prettier@^2.3.1"
   },
   "scripts": {
-    "start": "parcel ./src/html/index.html",
-    "package": "parcel build src/html/index.html",
+    "start": "webpack serve --open",
     "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
-    "eslint": "^7.16.0",
-    "node-sass": "^5.0.0",
-    "typescript": "^4.1.3"
+    "@types/d3": "^7.0.0",
+    "@types/d3-drag": "^3.0.1",
+    "@types/d3-selection": "^3.0.1",
+    "@types/d3-zoom": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
