--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "sourceMap": true,
     "removeComments": true,
     "moduleResolution": "Node",
+    "module": "ESNext",
     "allowSyntheticDefaultImports": true,
+    "outDir": "./dist",
     "noImplicitAny": true,
-    "target": "es2015",
+    "target": "es2017",
+    "allowJs": true,
     "lib": ["es2015", "dom"]
-  },
-  "files": ["src/ts/app.ts"]
+  }
 }
