--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "parallelshell": "^3.0.2",
-    "prettier": "npm:@btmills/prettier@^2.3.1"
+    "vue": "^3.2.2"
   },
   "scripts": {
     "start": "webpack serve --open",
