Mostly working with Parcel.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,13 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "chrome",
-      "request": "launch",
       "name": "Launch Chrome",
+      "request": "launch",
+      "type": "pwa-chrome",
       "url": "http://localhost:1234",
-      "sourceMapPathOverrides": {
-        "../*": "${webRoot}/*"
-      },
-      "webRoot": "${workspaceFolder}"
+      "pathMapping": {
+        "__parcel_source_root": "${workspaceFolder}"
+      }
     }
   ]
 }
