--- a/package.json
+++ b/package.json
@@ -7,35 +7,35 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@types/mousetrap": "^1.6.8",
-    "@types/node": "^16.4.13",
     "d3": "7.x",
     "d3-dsv": "^3.0.1",
+    "d3-scale": "^4.0.0",
     "d3-zoom": "^3.0.0",
     "eslint-config-prettier": "^8.3.0",
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "parallelshell": "^3.0.2",
-    "vue": "^3.2.2"
+    "prettier": "npm:@btmills/prettier@^2.3.1"
   },
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "parcel ./src/index.html",
     "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "@types/d3": "^7.0.0",
     "@types/d3-drag": "^3.0.1",
+    "@types/d3-scale": "^4.0.1",
     "@types/d3-selection": "^3.0.1",
     "@types/d3-zoom": "^3.0.1",
+    "@types/mousetrap": "^1.6.8",
+    "@types/node": "^16.4.13",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^7.32.0",
+    "parcel": "^2.0.0-rc.0",
     "sass": "^1.37.5",
-    "sass-loader": "^12.1.0",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.3.5"
   }
 }
