--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,24 +4,29 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout 🛎️
+      - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Set Node version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
       - name: Install and Build
         run: |
-          npm install
+          npm ci
           npm run build
 
-      - name: Deploy 🚀
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
           branch: gh-pages
