--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/d3-scale": "^4.0.1",
     "@types/d3-zoom": "^3.0.1",
     "@types/node": "^16.4.13",
+    "cpx": "^1.5.0",
     "d3": "7.x",
     "d3-dsv": "^3.0.1",
     "d3-scale": "^4.0.0",
@@ -20,8 +21,9 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html --public-url ./",
+    "copyIcons": "cpx src/icons/* dist/icons --clean",
+    "start": "parcel ./src/index.html & npm run copyIcons -- --watch",
+    "build": "npm run copyIcons && parcel build ./src/index.html --public-url ./",
     "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
