--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@types/d3": "^7.0.0",
     "@types/d3-scale": "^4.0.1",
     "@types/d3-zoom": "^3.0.1",
-    "@types/node": "^16.4.13",
+    "@types/node": "^16.7.4",
     "cpx": "^1.5.0",
     "d3": "7.x",
     "d3-dsv": "^3.0.1",
     "d3-scale": "^4.0.0",
     "d3-zoom": "^3.0.0",
     "parcel": "^2.0.0-rc.0",
-    "sass": "^1.37.5",
-    "typescript": "^4.3.5"
+    "sass": "^1.38.2",
+    "typescript": "^4.4.2",
+    "vue": "^3.2.4"
   },
   "scripts": {
     "copyIcons": "cpx src/icons/* dist/icons --clean",
@@ -27,8 +28,10 @@
     "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@parcel/transformer-vue": "^2.0.0-rc.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "@vue/compiler-sfc": "^3.2.6",
     "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
