--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 ﻿{
   "compilerOptions": {
+    "strict": true,
     "sourceMap": true,
     "removeComments": true,
     "moduleResolution": "Node",
@@ -7,7 +8,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
     "noImplicitAny": true,
-    "target": "es2017",
+    "target": "esnext",
     "allowJs": true,
     "lib": ["es2015", "dom"]
   }
