--- a/package.json
+++ b/package.json
@@ -6,35 +6,31 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@parcel/transformer-sass": "^2.0.0-rc.0",
     "@types/d3": "^7.0.0",
     "@types/d3-scale": "^4.0.1",
     "@types/d3-zoom": "^3.0.1",
     "@types/node": "^16.7.4",
-    "cpx": "^1.5.0",
     "d3": "7.x",
     "d3-dsv": "^3.0.1",
     "d3-scale": "^4.0.0",
     "d3-zoom": "^3.0.0",
-    "parcel": "^2.0.0-rc.0",
     "sass": "^1.38.2",
     "typescript": "^4.4.2",
     "vue": "^3.2.4"
   },
   "scripts": {
-    "copyIcons": "cpx src/icons/* dist/icons --clean",
-    "start": "concurrently \"parcel ./src/index.html\" \"npm run copyIcons -- --watch\"",
+    "start": "vite",
     "build": "npm run copyIcons && parcel build ./src/index.html --public-url ./",
     "prettier": "node ./node_modules/prettier/bin-prettier.js --write ."
   },
   "devDependencies": {
-    "@parcel/transformer-vue": "^2.0.0-rc.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
-    "concurrently": "^6.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "npm:@btmills/prettier@^2.3.1"
+    "prettier": "npm:@btmills/prettier@^2.3.1",
+    "vite": "^2.5.1"
   }
 }
