--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3-zoom": "^3.0.0",
     "sass": "^1.38.2",
     "typescript": "^4.4.2",
+    "vite-svg-loader": "^2.2.0",
     "vue": "^3.2.4"
   },
   "scripts": {
