--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,39 @@
-﻿{
+{
   "compilerOptions": {
-    "strict": true,
-    "sourceMap": true,
-    "removeComments": true,
-    "moduleResolution": "Node",
-    "module": "ESNext",
-    "allowSyntheticDefaultImports": true,
-    "outDir": "./dist",
-    "noImplicitAny": true,
     "target": "esnext",
-    "allowJs": true,
-    "lib": ["es2015", "dom"]
-  }
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "types": [
+      "webpack-env"
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
