--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "d3-zoom": "^3.0.0",
     "sass": "^1.38.2",
     "typescript": "^4.4.2",
-    "vue": "^3.2.4"
+    "vue": "^3.2.4",
+    "vue-svg-loader": "^0.17.0-beta.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -46,7 +47,6 @@
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   },
-  "_id": "baby-skill-tree@0.1.0",
   "license": "MIT",
   "readme": "ERROR: No README data found!"
 }
