--- a/package.json
+++ b/package.json
@@ -40,13 +40,11 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "npm:@btmills/prettier@^2.3.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   },
-  "license": "MIT",
-  "readme": "ERROR: No README data found!"
+  "license": "MIT"
 }
